--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,112 +1,228 @@
-@font-face {
-    font-family: 'PokemonFont'; /* Define a name for the font */
-    src: url('../fonts/PokemonHollowNormal-pyPZ.ttf') format('woff'); /* Path to the font file */
-}
+    @font-face {
+        font-family: 'PokemonFont'; /* Define a name for the font */
+        src: url('../fonts/PokemonHollowNormal-pyPZ.ttf') format('woff'); /* Path to the font file */
+    }
 
-.home-container {
+    .home-container {
+        display: flex;
+    flex-direction: column;
     position: relative;
     text-align: center;
     color: white;
     font-size: 24px;
     padding: 20px;
-}
+    }
 
-.homepage-content-box {
+    .homepage-content-box {
+        display: flex;
+        height: 100%;
+        width: 100%;
+    }
+
+    .list-content {
+        flex: 1;
+        padding: 20px; 
+        padding-bottom: 50px;
+        height: 800px;
+        flex: 1;
+    }
+    
+    
+    .bg-image {
+        background-image: url('../images/pk.jpg');
+        background-size: cover;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        filter: blur(5px);
+    }
+
+    .pokemon-list {
+        position: fixed;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        
+        height: 550px; 
+        padding-top: 2px;       
+        padding-left: 20px;
+        
+    }
+
+    .button-content-box {
+        display: flex;
+        justify-content: space-between; 
+        align-items: center;
+        height: 50px;
+        width: 500px;
+        margin-top: 550px; 
+    }
+
+    .button-content {
+        background: linear-gradient(180deg, #a7a4a4, #1c1c1c);
+        color: white;
+        border: 2px solid #726d6d;
+        text-align: center;
+        border-radius: 10px;
+        font-family: 'PokemonFont', sans-serif;
+        font-size: 18px;
+        cursor: pointer;
+        transition: transform 0.3s ease, box-shadow 0.4s ease, background 0.3s ease;
+        transform: translateZ(0);
+        width: 200px;
+        box-shadow: 0 2px 5px 0 rgba(237, 116, 116, 0.25);
+        margin-left: 20px;
+        margin-top: 10px;
+        
+    }
+
+
+    .button-content:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 10px 0 rgba(199, 51, 51, 0.25);
+        background: linear-gradient(180deg, #4b4b4b, #161010);
+        font-weight: bold;
+    }
+
+    .pokemon-info {
+      background-image: linear-gradient(to right, rgba(229, 218, 218, 9), rgba(255,0,0,0)); 
+      opacity: 0.8;
+      box-shadow: 2px 4px 10px 2px rgba(198, 196, 196, 0.25);
+      color: rgb(12, 11, 11);
+      width: 30vw;
+      margin-bottom: 3px;
+      padding: 20px;
+      font-size: 20px;
+      cursor: pointer;
+      margin-right: 10px;
+      border-radius: 10px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      min-height: 60px;
+      min-width: 120px;
+      transition: background 0.3s, transform 0.2s;
+    }
+    
+    
+    
+    .pokemon-info:hover {
+      background: rgba(255, 255, 255, 0.8);
+      transform: scale(1.03);
+    }
+    
+    
+    
+    .pokemonName{
+        flex: 1;
+        font-family: 'PokemonFont';
+        font-size: 30px;
+    }
+
+    .pokemonId{
+        font-family: 'PokemonFont';
+        font-size: 30px;
+        flex: 1;
+    
+    }
+
+    .pokemon-image {
+        flex: 1;
+        height: 100px;
+        width: 100px;
+    }
+
+
+
+.display-content {
     display: flex;
-    height: 100%;
-}
-
-.list-content {
     flex: 1;
-    padding: 20px; 
-    padding-bottom: 50px;
-    height: 800px;
-    border: 2px solid black;
+    flex-direction: column;
+    padding: 20px;
+    height: 580px;
+    margin-top: 3px;
   }
   
-.display-content {
-    flex: 1; 
-    padding: 200px;
-    align-items: center;
-    height: 200px;
-    border: 2px solid rgb(214, 67, 67);
-}
 
-
-.bg-image {
-    background-image: url('../images/pk.jpg');
-    background-size: cover;
-    position: fixed;
-    top: 0;
-    left: 0;
+  .image-container {
+    position: relative;
     width: 100%;
-    height: 100%;
-    z-index: -1;
-    filter: blur(5px);
-}
-
-.pokemon-list {
+  }
+  .image-pokemon {
+    height: 210px;
+    width: 210px;
+    border-radius: 10%;
+    box-shadow: 0 0 20px rgba(12, 0, 0, 0.5);
+    margin-bottom: 3px;
+    margin-top: 2px;
+  }
+  
+  .info-div {
+    font-family: 'aboutPagefont';
+    text-align: center;
     display: flex;
-    align-items: center;
     flex-direction: column;
-    height: 600px;
-    overflow-x: auto; 
-    white-space: nowrap;
-    padding-top: 10px;
-    padding-left: 20px;
-    scrollbar-color: transparent transparent; 
-}
-
-
-.pokemon-list::-webkit-scrollbar {
-    width: 1px; 
-}
-
-.pokemon-list::-webkit-scrollbar-thumb {
-    background-color: transparent;
-}
-
-  .pokemon-info {
-    background: rgba(255, 255, 255, 0.5); 
-    box-shadow: 2px 4px 10px 2px rgba(198, 196, 196, 0.25);
-    color: rgb(12, 11, 11);
-    width: 30vw;
-    padding: 20px;
-    font-size: 18px;
-    cursor: pointer;
-    margin-right: 10px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-    min-height: 80px;  
-    min-width: 160px;
-    transition: background 0.3s, transform 0.2s; /* Adding transitions for hover effect */
-  }
-  
-  .pokemon-info:hover {
-    background: rgba(255, 255, 255, 0.8); /* Adjust the alpha value (0.8) for hover transparency */
-    transform: scale(1.06); /* Adding a scale effect on hover */
+    height: 200px;
+    width: 100%;
   }
   
   
-.pokemon-name{
-    flex: 1;
+  .info-display {
+    text-align: center;
+  }
+  
+  .pokemon-name {
     font-family: 'PokemonFont';
     font-size: 30px;
-}
-
-.pokemon-id{
+    text-transform: uppercase;
+    margin-bottom: 10px;
+  }
+  
+  .pokemon-id {
     font-family: 'PokemonFont';
-    font-size: 30px;
-    flex: 1;
-   
-}
+    font-size: 20px;
+    margin-top: 10px;
+  }
+  
+  .additional-info {
+    background-color: aliceblue;
+    color: black;
+    border-radius: 40px;
+    height: 200px;
+    width: 480px;
+    margin-top: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 18px;
+  }
 
-.pokemon-image {
-    flex: 1;
-    height: 100px;
-    width: 100px;
-}
+  .pokemon-name-div{
+    color: black;
+    width: 250px;
+    height: 70px;
+    margin-left: 120px;
+  }
 
+  
+  
+  .INFO{
+    border: 2px solid ;
+    height: 500px;
+    width: 500px;
+    border-radius: 10px;
+    margin-left: 90px;
+    margin-top: 30px;
+    background-color: rgb(186, 186, 186);
+    box-shadow: 0 0 20px rgba(6, 6, 6, 0.5);
+  }
+
+  .INFO:hover{
+    box-shadow: 0 0 20px rgba(6, 6, 6, 0.5);
+    transform: scale(1.03);
+  }
