--- a/src/css/about.css
+++ b/src/css/about.css
@@ -22,7 +22,7 @@ html, body {
 }
 
 .bg-about {
-    background-image: url('../images/pk.jpg');
+    background-image: url('../images/forest.jpg');
     background-size: cover;
     position: fixed;
     top: 0;
@@ -38,9 +38,10 @@ html, body {
 /* about.css */
 .about-content-box {
     position: absolute;
+    opacity: 0.9;
     top: 90%;
     right: 15%;
-    background: linear-gradient(180deg, #ffffff, #474343);
+    background: radial-gradient(circle, #eae9e4 0%, #efdbc9 100%);
     box-shadow: 2px 4px 10px 2px rgba(198, 196, 196, 0.25);
     color: rgb(12, 11, 11);
     width: 65vw;
