--- a/src/css/about.css
+++ b/src/css/about.css
@@ -22,7 +22,7 @@ html, body {
 }
 
 .bg-about {
-    background-image: url('../images/forest.jpg');
+    background-image: url('../images/pk.jpg');
     background-size: cover;
     position: fixed;
     top: 0;
