--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,37 +1,43 @@
 
 .navbar {
-    display: flex;
-  justify-content: center; /* Center the navbar horizontally */
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  margin-top: 10px;
 }
 
 .nav-link {
     font-family: 'PokemonFont', sans-serif;
-    background: radial-gradient(circle, #dddcd5 0%, #ffb574 100%); 
-    color: rgb(31, 30, 30);
+    background: linear-gradient(180deg, #000, #333);
+    color: white;
+    border: 1px solid #000;
+    font-size: 25px;
     padding: 10px 20px;
     border-radius: 10px;
     cursor: pointer;
     transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
-    width: 200px;
-    height: 50px;
+    flex: 1;
     transform: translateZ(0);
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
-    margin-right: 20px;
+    
+}
+
+.nav-link:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
+  background: linear-gradient(180deg, #333, #000);
 }
 
 
 .active {
     transform: translateY(-2px);
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
-    background: linear-gradient(180deg, #bab9b9, #f3c196);
-    font-weight: bold;
+    background: linear-gradient(180deg, #333, #000);
+    font-weight: bold; /* Make the active item bold */
   }
 
 .nav-link a {
     font-family: 'PokemonFont', sans-serif;
     text-decoration: none;
-    color: #0d0c0c;
-    font-size: 25px;
+    color: #efe8e8;
+    font-size: 28px;
 }
